--- a/client-manuspec/src/components/Footer/Footer.scss
+++ b/client-manuspec/src/components/Footer/Footer.scss
@@ -6,9 +6,14 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
+  margin-top: 4rem;
 
   @include tablet {
-    padding: 6rem;
+    margin-top: 8rem;
+  }
+
+  @include desktop {
+    margin-top: 6rem;
   }
 
   &__text {
