--- a/client-manuspec/src/components/Nav/Nav.scss
+++ b/client-manuspec/src/components/Nav/Nav.scss
@@ -51,6 +51,7 @@
     text-transform: uppercase;
     font-size: 0.9rem;
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
 
     @include tablet {
       padding: 0 0.8rem;
@@ -59,6 +60,11 @@
 
     @include desktop {
       padding: 0 2.5rem;
+
+      &:hover {
+        border-bottom: 1px solid black;
+        padding-bottom: 0.5rem;
+      }
     }
   }
 
@@ -74,5 +80,9 @@
     background-color: #ee9986;
     letter-spacing: 2px;
     cursor: pointer;
+
+    &:hover {
+      opacity: 0.8;
+    }
   }
 }
