add reports page mobile style

--- a/client-manuspec/src/components/ReportsBottomLeft/ReportsBottomLeft.scss
+++ b/client-manuspec/src/components/ReportsBottomLeft/ReportsBottomLeft.scss
@@ -4,8 +4,10 @@
 .reports {
   &__bottom {
     display: flex;
+    flex-direction: column;
   }
   &__top-section {
     display: flex;
+    flex-direction: column;
   }
 }
