--- a/client-manuspec/src/components/ReportsTopRight/ReportsTopRight.scss
+++ b/client-manuspec/src/components/ReportsTopRight/ReportsTopRight.scss
@@ -1,9 +1,5 @@
 .reports {
-  &__engine-air {
-    display: flex;
-  }
-
-  &__drive-belt {
-    display: flex;
+  &__group {
+    margin: 1rem 0;
   }
 }
