--- a/client-manuspec/src/components/ReportsHeader/ReportsHeader.scss
+++ b/client-manuspec/src/components/ReportsHeader/ReportsHeader.scss
@@ -4,44 +4,36 @@
 .reports {
   &__header {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    // justify-content: space-evenly;
+    // align-items: center;
+  }
+
+  &__middle {
+    margin: 1rem 0;
+  }
+
+  &__input {
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    width: 100%;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__fill {
+    width: 100%;
+    display: flex;
     align-items: center;
   }
 
-  &__outline {
-    display: flex;
-  }
-
-  &__green {
-    width: 1rem;
-    height: 1rem;
-    background-color: green;
-
-    &--outline {
-      width: 1.5rem;
-      height: 1.5rem;
-    }
-  }
-
-  &__yellow {
-    width: 1rem;
-    height: 1rem;
-    background-color: yellow;
-
-    &--outline {
-      width: 1.5rem;
-      height: 1.5rem;
-    }
-  }
-
-  &__red {
-    width: 1rem;
-    height: 1rem;
-    background-color: red;
-
-    &--outline {
-      width: 1.5rem;
-      height: 1.5rem;
-    }
+  &__header-label {
+    margin-right: 0.5rem;
+    min-width: 6rem;
   }
 }
