--- a/client-manuspec/src/pages/Reports/Reports.scss
+++ b/client-manuspec/src/pages/Reports/Reports.scss
@@ -2,5 +2,13 @@
 @use "../../styles/partials/variables" as *;
 
 .reports {
-  margin: 0 6rem 0 6rem;
+  // margin: 0 6rem 0 6rem;
+  padding: 1rem;
+
+  &__title {
+    font-weight: 500;
+    border-bottom: 2px solid black;
+    padding: 1.5rem 0 1rem 0;
+    margin-bottom: 1.5rem;
+  }
 }
