--- a/client-manuspec/src/components/ReportsHeader/ReportsHeader.scss
+++ b/client-manuspec/src/components/ReportsHeader/ReportsHeader.scss
@@ -7,10 +7,24 @@
     flex-direction: column;
     // justify-content: space-evenly;
     // align-items: center;
+
+    @include desktop {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__left {
+    @include desktop {
+    }
   }
 
   &__middle {
     margin: 1rem 0;
+
+    @include desktop {
+      margin: 0;
+    }
   }
 
   &__input {
