--- a/client-manuspec/src/components/ReportsTopRight/ReportsTopRight.scss
+++ b/client-manuspec/src/components/ReportsTopRight/ReportsTopRight.scss
@@ -2,4 +2,12 @@
   &__group {
     margin: 1rem 0;
   }
+
+  &__right-text {
+    margin: 1rem 0;
+  }
+
+  &__left-text {
+    text-transform: uppercase;
+  }
 }
