--- a/client-manuspec/src/components/ReportsBottomRight/ReportsBottomRight.scss
+++ b/client-manuspec/src/components/ReportsBottomRight/ReportsBottomRight.scss
@@ -6,15 +6,40 @@
     display: flex;
     flex-direction: column;
     // justify-content: space-between;
+
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
   &__rear-brakes {
     display: flex;
     flex-direction: column;
     // justify-content: space-between;
+
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+      margin: 1rem 0;
+    }
   }
 
   &__brakes {
     display: none;
+
+    @include tablet {
+      display: flex;
+      width: 15rem;
+    }
+
+    @include desktop {
+      margin: 4rem;
+    }
+  }
+
+  &__image {
+    display: flex;
+    justify-content: center;
   }
 
   &__subtext {
