--- a/client-manuspec/src/components/ReportsGuide/ReportsGuide.scss
+++ b/client-manuspec/src/components/ReportsGuide/ReportsGuide.scss
@@ -9,6 +9,10 @@
     margin: 1rem 0;
     border-bottom: 1px solid black;
     padding-bottom: 1.5rem;
+
+    @include desktop {
+      flex-direction: row;
+    }
   }
 
   &__guide-text {
