--- a/client-manuspec/src/pages/Reports/Reports.scss
+++ b/client-manuspec/src/pages/Reports/Reports.scss
@@ -5,10 +5,63 @@
   // margin: 0 6rem 0 6rem;
   padding: 1rem;
 
+  @include tablet {
+    padding: 1rem 3rem;
+  }
+
+  @include desktop {
+    padding: 1rem 6rem;
+  }
+
   &__title {
     font-weight: 500;
     border-bottom: 2px solid black;
     padding: 1.5rem 0 1rem 0;
     margin-bottom: 1.5rem;
+
+    @include tablet {
+      margin-right: 20rem;
+    }
+
+    @include desktop {
+      margin-right: 48rem;
+      padding-left: 1rem;
+    }
+  }
+
+  &__technician {
+    display: flex;
+    margin: 1rem 0;
+  }
+
+  &__tech-input {
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__finish {
+    background-color: #0b99ff;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.75rem 4rem;
+    margin: 2rem 0 0 0;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #094571;
+    }
   }
 }
