--- a/client-manuspec/src/pages/Reports/Reports.scss
+++ b/client-manuspec/src/pages/Reports/Reports.scss
@@ -40,6 +40,7 @@
     background-color: transparent;
     padding: 0.5rem;
     margin-left: 0.5rem;
+    line-height: 1.5;
 
     &:focus {
       outline: none;
