--- a/client-manuspec/src/pages/Profile/Profile.scss
+++ b/client-manuspec/src/pages/Profile/Profile.scss
@@ -5,12 +5,57 @@
   background-color: #eaeaea;
   border-radius: 8px;
   padding: 1rem;
-  margin: 1rem;
+  margin: 2rem 1rem;
+  gap: 0.5rem;
+
+  @include tablet {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 3rem 1rem;
+    margin: 1rem 3rem;
+  }
 
   &__image {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     background-color: grey;
+
+    @include tablet {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__name {
+    font-size: 1.5rem;
+  }
+
+  &__middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__num {
+    margin-bottom: 1rem;
+  }
+
+  &__number {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  &__email {
+    font-size: 1rem;
   }
 }
