--- a/client-manuspec/src/components/CustomerFiles/CustomerFiles.scss
+++ b/client-manuspec/src/components/CustomerFiles/CustomerFiles.scss
@@ -10,6 +10,16 @@
     }
   }
 
+  &__file {
+    text-decoration: none;
+    color: black;
+    transition: all 0.3 ease-in-out;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
   &__files-nav {
     padding: 0 1rem;
 
@@ -33,7 +43,7 @@
   &__list {
     display: flex;
     justify-content: space-between;
-    margin: 1rem 0;
+    margin: 2rem 0;
     padding: 0 1rem;
     text-align: center;
   }
