--- a/client-manuspec/src/pages/Dashboard/Dashboard.scss
+++ b/client-manuspec/src/pages/Dashboard/Dashboard.scss
@@ -84,6 +84,10 @@
 
     @include desktop {
       display: flex;
+      color: green;
+      position: absolute;
+      right: 12rem;
+      top: 24rem;
     }
   }
 }
