--- a/client-manuspec/src/pages/Login/Login.scss
+++ b/client-manuspec/src/pages/Login/Login.scss
@@ -90,4 +90,17 @@
       width: 60%;
     }
   }
+
+  &__account {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 2rem;
+    gap: 0.5rem;
+  }
+
+  &__user-text,
+  &__user-pass {
+    font-weight: bold;
+  }
 }
