--- a/client-manuspec/src/components/CustomerFiles/CustomerFiles.scss
+++ b/client-manuspec/src/components/CustomerFiles/CustomerFiles.scss
@@ -10,13 +10,25 @@
     }
   }
 
+  &__date {
+    @include tablet {
+      width: 10rem;
+      margin-left: 3.5rem;
+    }
+  }
+
   &__file {
     text-decoration: none;
     color: black;
     transition: all 0.3 ease-in-out;
 
+    @include tablet {
+      width: 10rem;
+      margin-right: 3rem;
+    }
+
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
   }
 
