--- a/client-manuspec/src/pages/Reports/Reports.scss
+++ b/client-manuspec/src/pages/Reports/Reports.scss
@@ -2,7 +2,6 @@
 @use "../../styles/partials/variables" as *;
 
 .reports {
-  // margin: 0 6rem 0 6rem;
   padding: 1rem;
 
   @include tablet {
@@ -47,13 +46,23 @@
     }
   }
 
+  &__buttons {
+    display: flex;
+    flex-direction: column;
+
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
   &__finish {
     background-color: #0b99ff;
     border: none;
     border-radius: 20px;
     color: white;
     text-transform: uppercase;
-    padding: 0.75rem 4rem;
+    padding: 0.75rem 5rem;
     margin: 2rem 0 0 0;
     font-size: 1rem;
     font-weight: 600;
@@ -64,5 +73,49 @@
       cursor: pointer;
       background-color: #094571;
     }
+  }
+
+  &__save {
+    background-color: #2ce96b;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.75rem 5rem;
+    margin: 2rem 0 0 0;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #146314;
+    }
+  }
+
+  &__print {
+    background-color: #f24822;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.75rem 5rem;
+    margin: 2rem 0 0 0;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #801111;
+    }
+  }
+}
+
+@media print {
+  @page {
+    size: 1280px;
   }
 }
