--- a/client-manuspec/src/components/CustomerFiles/CustomerFiles.scss
+++ b/client-manuspec/src/components/CustomerFiles/CustomerFiles.scss
@@ -28,7 +28,7 @@
     }
 
     &:hover {
-      transform: scale(1.1);
+      color: #e9912c;
     }
   }
 
@@ -66,6 +66,33 @@
 
     @include tablet {
       display: flex;
+    }
+  }
+
+  &__delete {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    border-radius: 5px;
+    background-color: red;
+    margin: 0.5rem 10rem;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 600;
+    padding: 0.5rem 1rem;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.8;
+    }
+
+    @include tablet {
+      margin: 0.5rem 10rem;
+    }
+
+    @include desktop {
+      margin: 0.5rem 30rem;
     }
   }
 }
