--- a/client-manuspec/src/pages/CustomersFile/CustomersFile.scss
+++ b/client-manuspec/src/pages/CustomersFile/CustomersFile.scss
@@ -10,6 +10,7 @@
   margin: 2rem 1rem;
   gap: 0.5rem;
   background-color: #eaeaea;
+  position: relative;
 
   @include tablet {
     flex-direction: row;
@@ -76,6 +77,113 @@
 
     @include tablet {
       margin-bottom: 1rem;
+    }
+  }
+
+  &__edit {
+    position: absolute;
+    top: 1.5rem;
+    right: 2rem;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.2);
+    }
+  }
+}
+
+.close {
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.modal {
+  background-color: rgb(230, 230, 230);
+  margin: 2rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  position: relative;
+
+  @include tablet {
+    margin: 3rem;
+  }
+
+  @include desktop {
+    padding: 1.5rem 3rem 3rem;
+  }
+  &__title {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  &__form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    position: relative;
+
+    @include desktop {
+      flex-wrap: nowrap;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+    }
+  }
+
+  &__container {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  &__text {
+    margin-right: 1rem;
+  }
+
+  &__input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+
+    &:focus {
+      outline: none;
+    }
+
+    &::placeholder {
+      text-align: center;
+    }
+
+    @include desktop {
+      width: 10rem;
+    }
+  }
+
+  &__button {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__save {
+    padding: 1rem 4rem;
+    border-radius: 8rem;
+    border: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    background-color: #ee9986;
+    letter-spacing: 1px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.8;
     }
   }
 }
